--- a/web/themes/custom/customer/assets/css/layouts/layout-mentions.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-mentions.css
@@ -1,16 +1,30 @@
-.basic .layout-content{
-    flex-direction: column;
-}
-.basic h1{
-    margin-bottom: 0.75em;
-}
-.basic h2{
-    color:black;
-    font-size: 1.2rem;
-    margin-bottom: 1em;
+.basic .layout-content {
+  flex-direction: column;
+  padding: 4em 2em;
 }
 
-.basic h3{
-    font-family: 'Oswald', sans-serif;
-    font-size: 1rem;
+.basic h1 {
+  margin-bottom: 0.75em;
 }
+
+.basic h2 {
+  color: black;
+  font-size: 1.2rem;
+  margin-bottom: 1em;
+}
+
+.basic h3 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1rem;
+}
+
+
+/* tablette et desktop */
+@media screen and (min-width: 1200px) {
+  .basic .layout-content {
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+}
+
+
