--- a/web/themes/custom/customer/assets/css/layouts/layout-contact.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-contact.css
@@ -33,10 +33,10 @@
   padding: 2.5em;
 }
 @media screen and (min-width: 768px){
-  .left .layout-content {    
+  .left .layout-content {
     align-items: center;
     padding: 5em;
-  } 
+  }
 }
 
 .left .layout-picture .field-picture {
@@ -48,7 +48,7 @@
     padding: 10em;
   }
 .left .layout-picture .field-picture {
-    margin-left: -30%;
+    margin-left: -10vw;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -124,6 +124,7 @@ form textarea {
   margin-bottom: 1.5em;
   font-family: 'Lato', sans-serif;
   width: 100%;
+  resize: none;
 }
 
 form input[type="submit"] {
@@ -131,10 +132,11 @@ form input[type="submit"] {
   text-align: right;
   color: rgb(250, 74, 93);
   font-family: 'Lato', sans-serif;
-  padding: .5em 1em;
+  padding: 1em 2em;
   border-radius: 15px;
   margin-bottom: 1.5em;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 
