--- a/web/themes/custom/customer/assets/css/layouts/layout-contact.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-contact.css
@@ -128,16 +128,17 @@ form textarea {
 }
 
 form input[type="submit"] {
-  background-color: white;
-  text-align: right;
   color: rgb(250, 74, 93);
-  font-family: 'Lato', sans-serif;
-  padding: 1em 2em;
-  border-radius: 15px;
-  margin-bottom: 1.5em;
+  border: 1px solid rgb(250, 74, 93);
+  border-radius: 3em;
+  padding: 1em;
+  display: inline-flex;
+  align-items: center;
   text-transform: uppercase;
   cursor: pointer;
 }
+
+ 
 
 
 
